# BoxDetectorSDK

./: .gitignore  BoxDetectorSDK.cpp  BoxDetectorSDK.cs  BoxDetectorTest.cpp  CMakeLists.txt  VERSION  auto_push.py  box_detector_cli.py  build_easy.bat  build_windows.bat  convert_gui.py  convert_to_onnx.py  create_dist.py  cross_compile.sh  detector_service.py  fix_push.sh  full_test.py  package.sh  push.py  push_to_github.sh  run_tests.py  verify_consistency.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml
BoxDetectorSDK_1.0.5/: BUILD.md  CHANGELOG.md  CMakeLists.txt  README.md  build_windows.bat
BoxDetectorSDK_1.0.5/include/: BoxDetectorSDK.h
BoxDetectorSDK_Dist/: BoxDetectorSDK.cpp  BoxDetectorSDK.cs  CMakeLists.txt  README.md  box_detector_cli.py  build_windows.bat
BoxDetectorSDK_Dist 2/: BUILD.md  CMakeLists.txt  README.md
BoxDetectorSDK_Dist 3/: BUILD.md  BoxDetectorSDK.cpp
BoxDetectorSDK_Dist 3/examples/: BoxDetectorExample.cpp
BoxDetectorSDK_Dist/examples/: BoxDetectorExample.cpp
Python-3.11.9/: Makefile  Makefile.pre  config.status  platform  pybuilddir.txt  pyconfig.h  python-config
Python-3.11.9/Misc/: python-config.sh  python-embed.pc  python.pc
Python-3.11.9/Modules/: ld_so_aix
Python-3.11.9/Programs/: _freeze_module
docker/: Dockerfile  requirements.txt
